<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="58dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="View Server"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60px"
            android:layout_marginLeft="10px"
            android:onClick="onServer"
            android:src="@android:drawable/ic_menu_agenda" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:text="@string/upload"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="60px"
            android:layout_marginLeft="10px"
            android:onClick="onUpload"
            android:src="@drawable/upload" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_toRightOf="@+id/linearLayout1"
        android:layout_marginLeft="40px"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:text="@string/remoteDownload"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60px"
            android:layout_marginLeft="10px"
            android:onClick="onRemoteDownload"
            android:src="@android:drawable/ic_menu_add" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:text="@string/account"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60px"
            android:layout_marginLeft="10px"
            android:onClick="onAccount"
            android:src="@android:drawable/ic_menu_manage" />
    </LinearLayout>

</RelativeLayout>