<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip" >

        <LinearLayout
            android:id="@+id/serverActionLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDownload"
                android:src="@drawable/download" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDelete"
                android:src="@android:drawable/ic_menu_delete" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSettings"
                android:src="@android:drawable/ic_menu_manage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/serverActionNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/serverActionLayout"
            android:layout_alignRight="@+id/serverActionLayout"
            android:layout_below="@+id/serverActionLayout" >

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5px"
                    android:text="@string/download"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28px"
                    android:layout_toRightOf="@+id/textView3"
                    android:text="@string/delete"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="37px"
                    android:layout_toRightOf="@+id/textView1"
                    android:text="@string/setting"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

        </LinearLayout>

        <!-- <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:text="@string/status"></TextView> -->

        <ListView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/listserver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/serverActionNameLayout"
            android:orientation="vertical" >
        </ListView>


    </RelativeLayout>
